# Retromania

./: .gitignore  CMakeLists.txt  README.md
assets/images/: player_spritesheet.json
include/core/: Application.hpp  State.hpp
include/entities/: Enemy.hpp  Level.hpp  Platform.hpp  Player.hpp
include/states/: MenuState.hpp  PauseState.hpp  PlayState.hpp  SettingsState.hpp  StateStack.hpp
src/: main.cpp
src/core/: Application.cpp  State.cpp
src/entities/: Enemy.cpp  Platform.cpp  Player.cpp
src/states/: MenuState.cpp  PauseState.cpp  PlayState.cpp  SettingsState.cpp  StateStack.cpp
